--- a/src/components/mainpage/venityfm.css
+++ b/src/components/mainpage/venityfm.css
@@ -1,3 +1,126 @@
-.loginContainer{
+.venityfm{
     flex: 4;
+}
+.homewidgets{
+    display: flex;
+    margin: 20px;
+}
+.requestSong{
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    background-color: darkblue;
+    color: white;
+    font-weight: 600;
+    margin-right: 30px;
+    align-items: right;
+}
+.user{
+    flex: 4;
+    padding: 20px;
+}
+.userTitleContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.userAddButton{
+    width: 80px;
+    border: none;
+    padding: 5px;
+    background-color: teal;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+    font-size: 16px;
+}
+.userContainer{
+    display: flex;
+    margin-top: 20px;
+}
+.userShow{
+   flex: 1; 
+   padding: 20px;
+   -webkit-box-shadow: 0px 0px 11px -1px #0000; 
+   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+
+}
+.userUpdate{
+    flex: 2; 
+    padding: 20px;
+    -webkit-box-shadow: 0px 0px 11px -1px #0000; 
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    margin-left: 20px;
+ 
+ }
+ .userShowTop{
+     display: flex;
+     align-items: center;
+ }
+ .userShowImage{
+     width: 40px;
+     height: 40px;
+     border-radius: 50%;
+     object-position: cover;
+ }
+ .userShowTopTitle{
+     display: flex;
+     flex-direction: column;
+     margin-left: 20px;
+ }
+ .userShowUsername{
+     font-weight: 600;
+
+ }
+ .userShowUserTitle{
+     font-weight: 300;
+ }
+ .userShowBottom{
+     margin-top: 20px;
+ }
+ .userShowTitle{
+     font-size: 14px;
+     font-weight: 600;
+     color: rgb(175, 170, 170);
+ }
+.userShowInfo{
+    display: flex;
+    align-items: center;
+    margin: 20px 0px;
+    color: #444;
+}
+.userShowIcon{
+    font-size: 16px !important;
+}
+.userShowInfoTitle{
+    margin-left: 10px;
+    
+}
+.userUpdateTitle{
+    font-size: 24px;
+    font-weight: 600;
+}
+.userUpdateForm{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.userUpdateItem{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+.userUpdateItem>label{
+    margin-bottom: 5px;
+    font-size: 14px;
+
+}
+.bannerWheel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1000px;
+    height: 1000px;
 }
